# Real-Time-Connect-Four-Game

./: README.md  package-lock.json  pyproject.toml
backend/: main.py  pyproject.toml
backend/src/connect_four_game/: game_logic.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: GameBoard.jsx  GameScreen.jsx  MainMenu.jsx  MultiplayerMenu.jsx
