[project]
name = "real-time-connect-four"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.116.1",
    "gunicorn>=23.0.0", 
    "numpy>=2.3.2",
    "python-engineio>=4.12.2",
    "python-socketio>=5.13.0",
]

[tool.setuptools]
py_modules = ["main", "game_logic"]